# inf_to_json

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  json.h  main.cpp  reader.h  report.h  setup_api.cppm
